# python-project-50

./: .coverage  .gitignore  .python-version  Makefile  README.md  coverage.xml  pyproject.toml  ruff.toml
.github/workflows/: PyCI.yml
gendiff/: __init__.py  modules.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
